--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "(lldb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/lem_in",
+            "program": "${workspaceFolder}/lem-in",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
