--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: tide-jon <tide-jon@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2019/03/28 18:20:08 by tide-jon       #+#    #+#                 #
-#    Updated: 2019/07/06 16:59:55 by tide-jon      ########   odam.nl          #
+#    Updated: 2019/09/16 19:10:12 by tide-jon      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,8 @@ SOURCES =	atoi bzero digcount isalnum isalpha isascii isdigit isprint \
 		putendl_fd striteri get_next_line digcountbase itoabase \
 		putllnbr putullnbr ftoa strtoupper getnum chararrfree abs sqrt \
 		power pythagoras printf conv_csp conv_di conv_u conv_o conv_x \
-		conv_prcnt conv_f conv_x2 conv_o2 conv_di2 parsing dispatcher
+		conv_prcnt conv_f conv_x2 conv_o2 conv_di2 parsing dispatcher hashing \
+		primes error get_substr
 
 CFILE = $(SOURCES:%=ft_%.c)
 
